--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,20 @@
   </properties>
 
   <dependencies>
-	
   </dependencies>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.8.1</version>
+  			<configuration>
+  				<encoding>UTF-8</encoding>
+  				<source>1.8</source>
+  				<target>1.8</target>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
